# libepoxy-cmake

./: .gitignore  CMakeLists.txt  README.md  config.h.in
test/: .gitignore  CMakeLists.txt
test/src/: main.cpp
